[package]
name = "ssb-handshake"
version = "0.4.0"
authors = ["sean billig <sean.billig@gmail.com>"]
edition = "2018"
license = "AGPL-3.0"
description = "Secret-handshake protocol for Secure Scuttlebutt"
repository = "https://github.com/sunrise-choir/ssb-handshake"
documentation = "https://docs.rs/ssb-handshake/"
readme = "README.md"
keywords = ["secret-handshake", "handshake", "ssb", "scuttlebutt", "shs"]

[dependencies]
quick-error = "1.2"
ssb-crypto = "~0.1.3"

[dev-dependencies]
criterion = "~0.2.10"
hex = "0.3.2"
readwrite = "0.1.1"
rb = "0.3.2"

[[bench]]
name = "bench"
harness = false
